# yast-uml

./: .cvsignore  README.md  VERSION  yast2-uml.spec.in
package/: yast2-uml.changes
scripts/: Makefile.am  start-uml  uml
src/: Makefile.am  UML.ycp  cmdline.ycp  inst_uml_disks.ycp  inst_uml_kickoff.ycp  inst_uml_network.ycp  inst_uml_options.ycp  inst_uml_source.ycp  inst_uml_user.ycp  uml.desktop  uml.ycp  uml_disks_proposal.ycp  uml_network_proposal.ycp  uml_options_proposal.ycp  uml_source_proposal.ycp  uml_user_proposal.ycp
uml/: RPMNAME  yast2-uml.spec.in
uml/package/: yast2-uml.changes
uml/scripts/: Makefile.am  uml
uml/src/: inst_uml_disks.ycp  inst_uml_kickoff.ycp  inst_uml_network.ycp  inst_uml_options.ycp  inst_uml_source.ycp  uml_network_proposal.ycp
