# Makefile.am for uml/src

yncludedir = @yncludedir@/uml

client_DATA =				\
	uml.ycp				\
	uml_disks_proposal.ycp		\
	uml_options_proposal.ycp	\
	uml_user_proposal.ycp		\
	inst_uml_disks.ycp		\
	inst_uml_kickoff.ycp		\
	inst_uml_options.ycp		\
	inst_uml_user.ycp


ynclude_DATA =

desktop_DATA =				\
	uml.desktop

module_DATA =				\
	UML.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(module_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
